--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
   <title>Jack Watson - Software Engineer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </html>
 <body>
   <div id="app-root"></div>
